--- a/Angular Directives/n17-wait/package.json
+++ b/Angular Directives/n17-wait/package.json
@@ -6,7 +6,9 @@
   "dependencies": {},
   "devDependencies": {
     "browserify": "^9.0.8",
+    "gulp": "^3.8.11",
     "gulp-clean": "^0.3.1",
+    "gulp-ng-html2js": "^0.2.0",
     "gulp-stylus": "^2.0.1",
     "gulp-uglify": "^1.2.0",
     "vinyl-source-stream": "^1.1.0"
