--- a/Angular Directives/n17-wait/package.json
+++ b/Angular Directives/n17-wait/package.json
@@ -5,12 +5,16 @@
   "main": "main.js",
   "dependencies": {},
   "devDependencies": {
-    "browserify": "^9.0.8",
+    "browserify": "^10.0.0",
     "gulp": "^3.8.11",
     "gulp-clean": "^0.3.1",
+    "gulp-concat": "^2.5.2",
+    "gulp-minify-html": "^1.0.2",
     "gulp-ng-html2js": "^0.2.0",
     "gulp-stylus": "^2.0.1",
     "gulp-uglify": "^1.2.0",
+    "nib": "^1.1.0",
+    "run-sequence": "^1.1.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
