Upgrade gulp-clean to del; Add all except dist to ignore

--- a/Angular Directives/n17-wait/bower.json
+++ b/Angular Directives/n17-wait/bower.json
@@ -22,7 +22,10 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "js",
+    "stylus",
+    "templates"
   ],
   "dependencies": {
     "angular": "^1.2.14"
