--- a/Angular Directives/n17-wait/package.json
+++ b/Angular Directives/n17-wait/package.json
@@ -5,9 +5,10 @@
   "main": "main.js",
   "dependencies": {},
   "devDependencies": {
+    "bower": "^1.4.1",
     "browserify": "^10.0.0",
+    "del": "^1.1.1",
     "gulp": "^3.8.11",
-    "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.5.2",
     "gulp-minify-html": "^1.0.2",
     "gulp-ng-html2js": "^0.2.0",
@@ -18,7 +19,7 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "node ./node_modules/bower/bin/bower install"
   },
   "repository": {
     "type": "git",
