--- a/package.json
+++ b/package.json
@@ -2,28 +2,33 @@
   "name": "n17-wait",
   "version": "1.0.0",
   "description": "Angular Directive to display a wait/loading graphic",
-  "main": "main.js",
-  "dependencies": {},
+  "main": "./dist/no-frameworks/n17-wait.min.js",
   "devDependencies": {
     "bower": "^1.4.1",
-    "browserify": "^10.0.0",
-    "del": "^1.1.1",
-    "gulp": "^3.8.11",
+    "del": "^1.2.0",
+    "gulp": "^3.9.0",
     "gulp-concat": "^2.5.2",
-    "gulp-minify-html": "^1.0.2",
+    "gulp-minify-css": "^1.1.6",
+    "gulp-minify-html": "^1.0.3",
     "gulp-ng-html2js": "^0.2.0",
-    "gulp-stylus": "^2.0.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-stylus": "^2.0.4",
     "gulp-uglify": "^1.2.0",
+    "gulp-webpack-build": "^0.11.1",
+    "lodash": "^3.9.3",
+    "ng-annotate-webpack-plugin": "^0.1.2",
     "nib": "^1.1.0",
+    "node-libs-browser": "^0.5.2",
     "run-sequence": "^1.1.0",
-    "vinyl-source-stream": "^1.1.0"
+    "webpack": "^1.9.11",
+    "webpack-config": "^0.7.0"
   },
   "scripts": {
     "postinstall": "node ./node_modules/bower/bin/bower install"
   },
   "repository": {
     "type": "git",
-    "url": "git@gitlab.com:n17-solutions/components.git"
+    "url": "https://github.com/n17solutions/wait-directive.git"
   },
   "keywords": [
     "n17",
@@ -32,5 +37,9 @@
     "n17solutions"
   ],
   "author": "James Woodley",
-  "license": "ISC"
+  "license": "ISC",
+  "browser": {
+    "angular": "./bower_components/angular/index.js",
+    "templates": "./src/templates/templates.min.js"
+  }
 }
